improve the admin controls on mobile and prevent them overflowing weirdly on mobile

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -273,6 +273,7 @@ h1.header__text {
 
 .admin-indicator {
   vertical-align: text-bottom;
+  color: darkgoldenrod;
   line-height: 1.555rem;
   font-size: 1rem;
   display: inline-block;
